# chemical_visualizer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  compile_commands.json  index.html
.devcontainer/: Dockerfile
assets/: index-17cbc4f2.css  index-3bcbedea.js  index-5470a37d.css  index-71ccd671.js  index-7240c4b8.js  index-a2ee4259.css  index-ab18d8e5.js  index-e9bf2ebb.js  index-f5df5184.js
buildwasm/: wasm_app_emsdk.wasm
data/: cylinder.blend  cylinder.blend1
data/examples/molfiles/: 4-nitrophenyl-alpha-D-maltopentaoside.mol  ATP.mol  caffeine.mol
data/models/: cylinder.mesh  sphere.mesh
data/shaders/: basic.gl  basic_instanced.gl  common.gl
demo/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
demo/public/wasm/: cviz_wasm.js
demo/src/: App.jsx  index.css  main.jsx
demo/src/components/: Accordian.jsx  Check.jsx  Combobox.jsx  Modal.jsx  MolStructure.jsx  PdbSettings.jsx  PdbStructure.jsx  PrimaryButton.jsx  Throbber.jsx  Tooltip.jsx
demo/src/hooks/: useExternalScript.js  useWasm.js
demo/src/utils/: glmVector.js  hexToRGB.js
examples/: ATP.mol
gh-pages/: index.html  wasm_app_emsdk.wasm
gh-pages/data/examples/molfiles/: acetylene.mol  chloroquine.mol
gh-pages/data/shaders/: basic_instanced.gl
glfw_app/include/: assets.hpp  controls.hpp  entities.hpp  graphics.hpp  loader.hpp  shader.hpp  utilities.hpp
glfw_app/src/: assets.cpp  controls.cpp  entities.cpp  graphics.cpp  loader.cpp  main.cpp  shader.cpp  utilities.cpp
include/: assets.hpp  controls.hpp  editor.hpp  entities.hpp  globals.hpp  graphics.hpp  loader.hpp  mesh.hpp  platform.hpp  shader.hpp  texture.hpp  ui.hpp  utilities.hpp
include/camera/: core.hpp
include/shader/: core.hpp  globals.hpp
include/utilities/: colors.hpp  math.hpp  mesh_generation.hpp  strings.hpp
src/: assets.cpp  controls.cpp  editor.cpp  entities.cpp  graphics.cpp  loader.cpp  main.cpp  mesh.cpp  platform.cpp  shader.cpp  texture.cpp  ui.cpp  utilities.cpp
src/camera/: core.cpp
src/shader/: core.cpp  globals.cpp
src/utilities/: colors.cpp  math.cpp  mesh_generation.cpp  strings.cpp
subrepos/glew/: .gitrepo
subrepos/glfw/: .gitrepo
subrepos/glm/: .gitrepo
wasm/: cviz_wasm.wasm
web_application/: manifest.json  wasm_app.html
